Fix move and zoom to portal on mobile #6

--- a/style.css
+++ b/style.css
@@ -826,7 +826,7 @@ h3 {
 #portaldetails .title {
   width: auto;
   display: inline-block;
-  line-height: 20px;
+  line-height: 24px;
 }
 
 #portaldetails .close {
